Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -63,20 +63,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "84554"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "greenville_population = greenville['Population'] # change None\n",
     "greenville_population # 84554"
@@ -95,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "greenville_area = greenville['Are']\n",
+    "greenville_area = None\n",
     "greenville_area # 68"
    ]
   },
