--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -123,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_keys = list(greenville.key)\n",
+    "city_keys = None\n",
     "city_keys # ['Area', 'City', 'Country', 'Population']"
    ]
   },
