--- a/index.ipynb
+++ b/index.ipynb
@@ -135,7 +135,7 @@
     }
    ],
    "source": [
-    "city_keys = list(greenville.keys)\n",
+    "city_keys = greenville.\n",
     "city_keys # ['Area', 'City', 'Country', 'Population']"
    ]
   },
