--- a/index.ipynb
+++ b/index.ipynb
@@ -337,7 +337,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "los_cabos_pop = None\n",
+    "los_cabos_pop = cities[3]['Populat']\n",
     "los_cabos_pop # 287651"
    ]
   },
