--- a/index.ipynb
+++ b/index.ipynb
@@ -333,11 +333,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "287651"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "los_cabos_pop = cities[3]['Populat']\n",
+    "los_cabos_pop = cities[3]['Population']\n",
     "los_cabos_pop # 287651"
    ]
   },
