--- a/index.ipynb
+++ b/index.ipynb
@@ -395,7 +395,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cities[11]['City'] = None\n",
+    "cities[11]['City'] = 'Py'\n",
     "cities[11]['City'] # 'PyeongChang'"
    ]
   },
