Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -419,25 +419,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict"
+       "['City', 'Country', 'Population', 'Area']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pyeongchang_values = cities[-1]\n",
+    "pyeongchang_values = list(cities[-1])\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
-    "type(pyeongchang_values) # list"
+    "#type(pyeongchang_values) # list"
    ]
   },
   {
