Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -434,7 +434,7 @@
     }
    ],
    "source": [
-    "pyeongchang_values = list(citiesva[-1])\n",
+    "pyeongchang_values = list(cities.values([-\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
     "#type(pyeongchang_values) # list"
